// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`1. todo.onDraft >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value="read "Out of the Tar Pit" by Ben Moseley and Peter Marks"
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
]
`;

exports[`1. todo.onDraft > $stan changes 1`] = `
{
  "todo": {
    "draft": "read "Out of the Tar Pit" by Ben Moseley and Peter Marks",
  },
}
`;

exports[`2. todo.onAdd >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value=""
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />,
  "Hide completed",
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>,
  <ul>
    <li
      className=""
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
      read "Out of the Tar Pit" by Ben Moseley and Peter Marks
       
      <button
        onClick={[Function]}
      >
        ☠
      </button>
    </li>
  </ul>,
]
`;

exports[`2. todo.onAdd > $stan changes 1`] = `
{
  "todo": {
    "draft": "",
    "filtered": {
      "0": {
        "id": "#1580601600001",
        "text": "read "Out of the Tar Pit" by Ben Moseley and Peter Marks",
      },
    },
    "map": {
      "#1580601600001": {
        "id": "#1580601600001",
        "text": "read "Out of the Tar Pit" by Ben Moseley and Peter Marks",
      },
    },
  },
}
`;

exports[`3. todo.onDraft >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value="buy milk"
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />,
  "Hide completed",
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>,
  <ul />,
]
`;

exports[`3. todo.onDraft > $stan changes 1`] = `
{
  "todo": {
    "draft": "buy milk",
    "filtered": {
      "0": undefined,
    },
  },
}
`;

exports[`4. todo.onAdd >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value=""
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
]
`;

exports[`4. todo.onAdd > $stan changes 1`] = `
{
  "todo": {
    "draft": "",
    "filtered": {
      "0": {
        "id": "#1580601600001",
        "text": "read "Out of the Tar Pit" by Ben Moseley and Peter Marks",
      },
      "1": {
        "id": "#1580601600003",
        "text": "buy milk",
      },
    },
    "map": {
      "#1580601600003": {
        "id": "#1580601600003",
        "text": "buy milk",
      },
    },
  },
}
`;

exports[`5. todo.onAdd >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value=""
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />,
  "Hide completed",
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>,
  <ul>
    <li
      className=""
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
      read "Out of the Tar Pit" by Ben Moseley and Peter Marks
       
      <button
        onClick={[Function]}
      >
        ☠
      </button>
    </li>
    <li
      className=""
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
      buy milk
       
      <button
        onClick={[Function]}
      >
        ☠
      </button>
    </li>
  </ul>,
]
`;

exports[`5. todo.onAdd > $stan changes 1`] = `{}`;

exports[`6. todo.onDraft >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value=" "
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />,
  "Hide completed",
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>,
  <ul />,
]
`;

exports[`6. todo.onDraft > $stan changes 1`] = `
{
  "todo": {
    "draft": " ",
    "filtered": {
      "0": undefined,
      "1": undefined,
    },
  },
}
`;

exports[`7. todo.onAdd >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value=" "
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
]
`;

exports[`7. todo.onAdd > $stan changes 1`] = `{}`;

exports[`8. todo.onDraft >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value="b"
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />,
  "Hide completed",
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>,
  <ul>
    <li
      className=""
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
      buy milk
       
      <button
        onClick={[Function]}
      >
        ☠
      </button>
    </li>
  </ul>,
]
`;

exports[`8. todo.onDraft > $stan changes 1`] = `
{
  "todo": {
    "draft": "b",
    "filtered": {
      "0": {
        "id": "#1580601600003",
        "text": "buy milk",
      },
    },
  },
}
`;

exports[`9. todo.onDraft >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value="bu"
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />,
  "Hide completed",
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>,
  <ul>
    <li
      className=""
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
      buy milk
       
      <button
        onClick={[Function]}
      >
        ☠
      </button>
    </li>
  </ul>,
]
`;

exports[`9. todo.onDraft > $stan changes 1`] = `
{
  "todo": {
    "draft": "bu",
  },
}
`;

exports[`10. todo.onDraft >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value="buy"
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
]
`;

exports[`10. todo.onDraft > $stan changes 1`] = `
{
  "todo": {
    "draft": "buy",
  },
}
`;

exports[`11. todo.onDraft >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value="buy "
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />,
  "Hide completed",
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>,
  <ul>
    <li
      className=""
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
      buy milk
       
      <button
        onClick={[Function]}
      >
        ☠
      </button>
    </li>
  </ul>,
]
`;

exports[`11. todo.onDraft > $stan changes 1`] = `
{
  "todo": {
    "draft": "buy ",
  },
}
`;

exports[`12. todo.onDraft >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value="buy m"
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />,
  "Hide completed",
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>,
  <ul>
    <li
      className=""
    >
      <input
        checked={false}
        onChange={[Function]}
        type="checkbox"
      />
      buy milk
       
      <button
        onClick={[Function]}
      >
        ☠
      </button>
    </li>
  </ul>,
]
`;

exports[`12. todo.onDraft > $stan changes 1`] = `
{
  "todo": {
    "draft": "buy m",
  },
}
`;

exports[`13. todo.onDraft >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value="buy me"
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
]
`;

exports[`13. todo.onDraft > $stan changes 1`] = `
{
  "todo": {
    "draft": "buy me",
    "filtered": {
      "0": undefined,
    },
  },
}
`;

exports[`14. todo.onDraft >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value="buy mea"
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />,
  "Hide completed",
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>,
  <ul />,
]
`;

exports[`14. todo.onDraft > $stan changes 1`] = `
{
  "todo": {
    "draft": "buy mea",
  },
}
`;

exports[`15. todo.onDraft >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value="buy meat"
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />,
  "Hide completed",
  <button
    className="btn"
    disabled={true}
    onClick={[Function]}
  >
    Remove completed
  </button>,
  <ul />,
]
`;

exports[`15. todo.onDraft > $stan changes 1`] = `
{
  "todo": {
    "draft": "buy meat",
  },
}
`;

exports[`16. todo.onAdd >  (deep) 1`] = `
[
  <h1>
    To-do List
  </h1>,
  <form
    onSubmit={[Function]}
  >
    <input
      onInput={[Function]}
      placeholder="New Todo"
      type="text"
      value=""
    />
    <button
      className="btn"
      type="submit"
    >
      Create
    </button>
  </form>,
]
`;

exports[`16. todo.onAdd > $stan changes 1`] = `
{
  "todo": {
    "draft": "",
    "filtered": {
      "0": {
        "id": "#1580601600001",
        "text": "read "Out of the Tar Pit" by Ben Moseley and Peter Marks",
      },
      "1": {
        "id": "#1580601600003",
        "text": "buy milk",
      },
      "2": {
        "id": "#1580601600015",
        "text": "buy meat",
      },
    },
    "map": {
      "#1580601600015": {
        "id": "#1580601600015",
        "text": "buy meat",
      },
    },
  },
}
`;
